--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Mercury</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link rel="stylesheet" href="dist/styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="dist/main.js"></script>
+  <!-- build:css -->
+  <link rel="stylesheet" href="dist/styles.min.css">
+  <!-- endbuild -->
 </head>
+
 <body>
-  hi
+  Welcome to Mercury.
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- build:js -->
+  <script src="dist/main.min.js"></script>
+  <!-- endbuild -->
 </body>
+
 </html>
