--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head class="no-js">
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Mercury</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Remove .no-js class if possible -->
+  <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
+
   <!-- build:css -->
   <link rel="stylesheet" href="src/styles.css">
   <!-- endbuild -->
-  <script src="dist/modernizr-2.8.3.min.js"></script>
+
 </head>
 
 <body>
