--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>Mercury</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="./dist/images/favicon/favicon.png">
 
   <!-- Remove .no-js class if possible -->
   <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
 
   <!-- build:css -->
-  <link rel="stylesheet" href="src/styles.css">
+  <link rel="stylesheet" href="./src/css/main.min.css">
   <!-- endbuild -->
 
 </head>
@@ -22,8 +23,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="dist/jquery.min.js"><\/script>')</script>
+
   <!-- build:js -->
-  <script src="src/main.js"></script>
+  <script src="./src/js/bundle.js"></script>
   <!-- endbuild -->
 </body>
 
